// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add versions for independent packages 1`] = `
"#### 💥  Breaking Change

- woot [#12343](https://github.custom.com/pull/12343) (adam@dierkens.com)
- \`@foobar/release@1.0.0\`, \`@foobar/party@1.0.2\`
  - [PLAYA-5052] - Some Feature [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)
- \`@foobar/release@1.0.0\`, \`@foobar/party@1.0.2\`
  - [PLAYA-5052] - Some Feature - Revert [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)

#### 🏠  Internal

- \`@foobar/release@1.0.0\`
  - Another Feature [#1234](https://github.custom.com/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`should create sections for packages 1`] = `
"#### 💥  Breaking Change

- woot [#12343](https://github.custom.com/pull/12343) (adam@dierkens.com)
- \`@foobar/release\`, \`@foobar/party\`
  - [PLAYA-5052] - Some Feature [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)
- \`@foobar/release\`, \`@foobar/party\`
  - [PLAYA-5052] - Some Feature - Revert [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)

#### 🏠  Internal

- \`@foobar/release\`
  - Another Feature [#1234](https://github.custom.com/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;
